--- a/Lab. 4.ipynb
+++ b/Lab. 4.ipynb
@@ -730,67 +730,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "check_action_values(agent, state_size)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def test_model(agent: DQNAgent, env):\n",
-    "    eps = agent.epsilon\n",
-    "    agent.epsilon = 0\n",
-    "    rewards = []\n",
-    "    for _ in range(10):\n",
-    "        total_reward = 0\n",
-    "        i_state = env.reset()\n",
-    "\n",
-    "        state = np.zeros(state_size, dtype=np.float32)\n",
-    "        state[i_state] = 1\n",
-    "        actions = []\n",
-    "        for time in range(1000):\n",
-    "            action = agent.get_action(state)\n",
-    "            actions.append(action)\n",
-    "            _i_state, reward, done, _ = env.step(action)\n",
-    "            total_reward += reward\n",
-    "\n",
-    "            _state = np.zeros(state_size, dtype=np.float32)\n",
-    "            _state[_i_state] = 1\n",
-    "\n",
-    "\n",
-    "            state = _state\n",
-    "            if done:\n",
-    "                break\n",
-    "        print(actions)\n",
-    "        rewards.append(total_reward)\n",
-    "\n",
-    "    model.epsilon = eps\n",
-    "    return rewards"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "test_model(agent, env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -802,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,10 +751,7 @@
     "action_size = len(env.get_possible_actions(None))\n",
     "learning_rate = 0.001\n",
     "\n",
-    "state = env.reset()\n",
-    "state = np.array(state)\n",
-    "\n",
-    "model = DQN(learning_rate, np.prod(state.shape), action_size, 128, 64)"
+    "model = DQN(learning_rate, 48, action_size, 128, 64)"
    ]
   },
   {
@@ -827,11 +763,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch #0\tmean reward = 0.000\tepsilon = 0.750\n",
+      "epoch #1\tmean reward = 0.070\tepsilon = 0.700\n",
+      "epoch #2\tmean reward = 0.090\tepsilon = 0.650\n",
+      "epoch #3\tmean reward = 0.130\tepsilon = 0.600\n",
+      "epoch #4\tmean reward = 0.080\tepsilon = 0.550\n",
+      "epoch #5\tmean reward = 0.190\tepsilon = 0.500\n",
+      "epoch #6\tmean reward = 0.180\tepsilon = 0.450\n",
+      "epoch #7\tmean reward = 0.200\tepsilon = 0.400\n",
+      "epoch #8\tmean reward = 0.230\tepsilon = 0.350\n",
+      "epoch #9\tmean reward = 0.260\tepsilon = 0.300\n",
+      "epoch #10\tmean reward = 0.270\tepsilon = 0.250\n",
+      "epoch #11\tmean reward = 0.390\tepsilon = 0.200\n",
+      "epoch #12\tmean reward = 0.450\tepsilon = 0.150\n",
+      "epoch #13\tmean reward = 0.600\tepsilon = 0.100\n",
+      "epoch #14\tmean reward = 0.790\tepsilon = 0.050\n",
+      "epoch #15\tmean reward = 1.000\tepsilon = -0.000\n",
+      "You Win!\n"
+     ]
+    }
+   ],
    "source": [
-    "agent = DQNAgent(action_size, state.shape, learning_rate, model)\n",
+    "agent = DQNAgent(action_size, 48, learning_rate, model)\n",
     "\n",
     "agent.epsilon = 0.75\n",
     "\n",
@@ -844,19 +804,20 @@
     "    for _ in range(100):\n",
     "        total_reward = 0\n",
     "        state = env.reset()\n",
-    "        state = np.array(state)\n",
+    "        state = np.array(state).reshape(-1,).astype(np.float32)\n",
     "\n",
-    "        # state = np.zeros(state_size)\n",
-    "        # state[i_state] = 1\n",
     "        \n",
     "        for time in range(1000):\n",
     "            action = agent.get_action(state)\n",
     "            _state, reward, done, _ = env.step(action)\n",
-    "            _state = np.array(_state)\n",
+    "            _state = np.array(_state).reshape(-1,).astype(np.float32)\n",
     "            total_reward += reward\n",
     "\n",
-    "            # _state = np.zeros(state_size)\n",
-    "            # _state[_i_state] = 1\n",
+    "            if np.allclose(state, _state):\n",
+    "                reward = -1\n",
+    "\n",
+    "            if done and not reward:\n",
+    "                reward = -1\n",
     "\n",
     "            agent.remember(state, action, reward, _state, done)\n",
     "            agent.learn(batch_size)\n",
@@ -864,11 +825,11 @@
     "            if done:\n",
     "                break\n",
     "\n",
-    "        agent.update_epsilon_value()\n",
+    "\n",
     "        summary.append(total_reward)\n",
     "\n",
     "    print(\"epoch #{}\\tmean reward = {:.3f}\\tepsilon = {:.3f}\".format(e, np.mean(summary), agent.epsilon))\n",
-    "\n",
+    "    agent.update_epsilon_value()\n",
     "    if np.mean(summary) > 0.9:\n",
     "        print (\"You Win!\")\n",
     "        break"
@@ -883,14 +844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"CartPole-v0\").env\n",
+    "env = gym.make(\"CartPole-v0\")\n",
     "state_size = env.observation_space.shape[0]\n",
     "action_size = env.action_space.n\n",
-    "learning_rate = 0.001\n"
+    "learning_rate = 0.005\n"
    ]
   },
   {
@@ -905,13 +866,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch #0\tmean reward = 16.670\tepsilon = 0.450\n",
+      "epoch #1\tmean reward = 17.600\tepsilon = 0.400\n",
+      "epoch #2\tmean reward = 20.020\tepsilon = 0.350\n",
+      "epoch #3\tmean reward = 30.380\tepsilon = 0.300\n",
+      "epoch #4\tmean reward = 12.090\tepsilon = 0.250\n",
+      "epoch #5\tmean reward = 21.250\tepsilon = 0.200\n",
+      "epoch #6\tmean reward = 10.890\tepsilon = 0.150\n",
+      "epoch #7\tmean reward = 13.440\tepsilon = 0.100\n",
+      "epoch #8\tmean reward = 9.960\tepsilon = 0.050\n",
+      "epoch #9\tmean reward = 9.840\tepsilon = 0.000\n",
+      "epoch #10\tmean reward = 9.540\tepsilon = 0.010\n",
+      "epoch #11\tmean reward = 9.540\tepsilon = 0.010\n",
+      "epoch #12\tmean reward = 9.510\tepsilon = 0.010\n",
+      "epoch #13\tmean reward = 9.470\tepsilon = 0.010\n",
+      "epoch #14\tmean reward = 9.690\tepsilon = 0.010\n",
+      "epoch #15\tmean reward = 9.650\tepsilon = 0.010\n",
+      "epoch #16\tmean reward = 9.550\tepsilon = 0.010\n",
+      "epoch #17\tmean reward = 9.480\tepsilon = 0.010\n",
+      "epoch #18\tmean reward = 9.500\tepsilon = 0.010\n",
+      "epoch #19\tmean reward = 9.630\tepsilon = 0.010\n",
+      "epoch #20\tmean reward = 9.530\tepsilon = 0.010\n",
+      "epoch #21\tmean reward = 9.510\tepsilon = 0.010\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[72], line 24\u001B[0m\n\u001B[0;32m     21\u001B[0m _state \u001B[38;5;241m=\u001B[39m _state\u001B[38;5;241m.\u001B[39mastype(np\u001B[38;5;241m.\u001B[39mfloat32)\n\u001B[0;32m     23\u001B[0m agent\u001B[38;5;241m.\u001B[39mremember(state, action, reward, _state, done)\n\u001B[1;32m---> 24\u001B[0m \u001B[43magent\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlearn\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     25\u001B[0m state \u001B[38;5;241m=\u001B[39m _state\n\u001B[0;32m     26\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m done:\n",
+      "Cell \u001B[1;32mIn[18], line 37\u001B[0m, in \u001B[0;36mDQNAgent.learn\u001B[1;34m(self, batch_size)\u001B[0m\n\u001B[0;32m     34\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmemory\u001B[38;5;241m.\u001B[39mmem_cntr \u001B[38;5;241m<\u001B[39m batch_size:\n\u001B[0;32m     35\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m\n\u001B[1;32m---> 37\u001B[0m states, actions, rewards, _states, done \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmemory\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msample_buffer\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     39\u001B[0m states \u001B[38;5;241m=\u001B[39m T\u001B[38;5;241m.\u001B[39mtensor(states)\u001B[38;5;241m.\u001B[39mto(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mq\u001B[38;5;241m.\u001B[39mdevice)\n\u001B[0;32m     40\u001B[0m _states \u001B[38;5;241m=\u001B[39m T\u001B[38;5;241m.\u001B[39mtensor(_states)\u001B[38;5;241m.\u001B[39mto(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mq\u001B[38;5;241m.\u001B[39mdevice)\n",
+      "Cell \u001B[1;32mIn[5], line 27\u001B[0m, in \u001B[0;36mReplayBuffer.sample_buffer\u001B[1;34m(self, batch_size)\u001B[0m\n\u001B[0;32m     24\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21msample_buffer\u001B[39m(\u001B[38;5;28mself\u001B[39m, batch_size):\n\u001B[0;32m     25\u001B[0m     max_mem \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mmin\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmem_cntr, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmem_size)\n\u001B[1;32m---> 27\u001B[0m     probs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_softmax\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mabs\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreward_memory\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43mmax_mem\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     28\u001B[0m     batch \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mrandom\u001B[38;5;241m.\u001B[39mchoice(max_mem, batch_size)\n\u001B[0;32m     30\u001B[0m     states \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstate_memory[batch]\n",
+      "Cell \u001B[1;32mIn[5], line 22\u001B[0m, in \u001B[0;36mReplayBuffer._softmax\u001B[1;34m(x)\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;129m@staticmethod\u001B[39m\n\u001B[0;32m     21\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_softmax\u001B[39m(x: ndarray) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m ndarray:\n\u001B[1;32m---> 22\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m np\u001B[38;5;241m.\u001B[39mexp(x) \u001B[38;5;241m/\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexp\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39msum()\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
-    "agent = DQNAgent(action_size, learning_rate, model)\n",
+    "model = DQN(learning_rate, state_size, action_size, 32, 32)\n",
     "\n",
-    "agent.epsilon = 0.75\n",
+    "agent = DQNAgent(action_size, state_size, learning_rate, model)\n",
+    "\n",
+    "agent.epsilon = 0.5\n",
     "\n",
     "done = False\n",
     "batch_size = 64\n",
@@ -921,36 +927,27 @@
     "    summary = []\n",
     "    for _ in range(100):\n",
     "        total_reward = 0\n",
-    "        i_state = env.reset()\n",
-    "    \n",
-    "        #\n",
-    "        # INSERT CODE HERE to prepare appropriate format of the state for network\n",
-    "        #\n",
+    "        state = env.reset().astype(np.float32)\n",
     "        \n",
     "        for time in range(300):\n",
     "            action = agent.get_action(state)\n",
-    "            next_state_env, reward, done, _ = env.step(action)\n",
+    "            _state, reward, done, _ = env.step(action)\n",
     "            total_reward += reward\n",
+    "            _state = _state.astype(np.float32)\n",
     "\n",
-    "            #\n",
-    "            # INSERT CODE HERE to prepare appropriate format of the next state for network\n",
-    "            #\n",
-    "\n",
-    "            #add to experience memory\n",
-    "            agent.remember(state, action, reward, next_state, done)\n",
-    "            state = next_state\n",
+    "            agent.remember(state, action, reward, _state, done)\n",
+    "            agent.learn(batch_size)\n",
+    "            state = _state\n",
     "            if done:\n",
     "                break\n",
     "\n",
-    "        #\n",
-    "        # INSERT CODE HERE to train network if in the memory is more samples then size of the batch\n",
-    "        #\n",
-    "        \n",
     "        summary.append(total_reward)\n",
+    "\n",
+    "    agent.update_epsilon_value()\n",
+    "    print(\"epoch #{}\\tmean reward = {:.3f}\\tepsilon = {:.3f}\".format(e, np.mean(summary), agent.epsilon))\n",
     "    if np.mean(summary) > 195:\n",
     "        print (\"You Win!\")\n",
-    "        break\n",
-    "    print(\"epoch #{}\\tmean reward = {:.3f}\\tepsilon = {:.3f}\".format(e, np.mean(summary), agent.epsilon))"
+    "        break\n"
    ]
   },
   {
