--- a/Lab. 7.ipynb
+++ b/Lab. 7.ipynb
@@ -25,22 +25,11 @@
     "from collections import deque\n",
     "import gym\n",
     "import numpy as np\n",
+    "from numpy import ndarray\n",
     "import random"
    ],
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gym'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-1-7a828ff9d16c>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mcollections\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mdeque\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mgym\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mnumpy\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mrandom\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'gym'"
-     ]
-    }
-   ]
+   "execution_count": 41,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -54,8 +43,14 @@
     "trusted": true
    },
    "cell_type": "code",
-   "source": [],
-   "execution_count": null,
+   "source": [
+    "import torch as T\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.distributions import Categorical"
+   ],
+   "execution_count": 42,
    "outputs": []
   },
   {
@@ -84,52 +79,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "class ActorNetwork(nn.Module):\n",
+    "    def __init__(self, lr, state_shape, n_actions, fc1, fc2):\n",
+    "        super(ActorNetwork, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(state_shape, fc1)\n",
+    "        self.fc2 = nn.Linear(fc1, fc2)\n",
+    "        self.output = nn.Linear(fc2, n_actions)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "        self.optimizer = optim.Adam(self.parameters(), lr=lr)\n",
+    "        self.loss = nn.MSELoss()\n",
+    "        self.device = T.device('cuda:0') if T.cuda.is_available() else T.device('cpu')\n",
+    "        self.to(self.device)\n",
+    "\n",
+    "    def forward(self, state):\n",
+    "        state = F.relu(self.fc1(state))\n",
+    "        state = F.relu(self.fc2(state))\n",
+    "        probs = self.softmax(self.output(state))\n",
+    "\n",
+    "        return probs"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "class CriticModel(nn.Module):\n",
+    "    def __init__(self, lr, state_shape, fc1, fc2):\n",
+    "        super(CriticModel, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(state_shape, fc1)\n",
+    "        self.fc2 = nn.Linear(fc1, fc2)\n",
+    "        self.output = nn.Linear(fc2, 1)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "        self.optimizer = optim.Adam(self.parameters(), lr=lr)\n",
+    "        self.loss = nn.MSELoss()\n",
+    "        self.device = T.device('cuda:0') if T.cuda.is_available() else T.device('cpu')\n",
+    "        self.to(self.device)\n",
+    "\n",
+    "    def forward(self, state):\n",
+    "        state = F.relu(self.fc1(state))\n",
+    "        state = F.relu(self.fc2(state))\n",
+    "        probs = self.output(state)\n",
+    "\n",
+    "        return probs"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "metadata": {
     "trusted": true
    },
    "cell_type": "code",
    "source": [
-    "class REINFORCEAgent:\n",
-    "    def __init__(self, state_size, action_size, actor, critic):\n",
-    "        self.state_size = state_size\n",
-    "        self.action_size = action_size\n",
-    "        self.gamma = 0.99    # discount rate\n",
-    "        self.learning_rate = 0.001\n",
-    "        self.actor = actor\n",
-    "        self.critic = critic #critic network should have only one output\n",
-    "\n",
+    "class ACActor:\n",
+    "    def __init__(self, state_shape, n_actions, fc1: int = 128, fc2: int = 128, gamma: float = 0.99, alpha: float = 0.001, beta: float = 0.001):\n",
+    "        self.n_actions = n_actions\n",
+    "        self.gamma = gamma\n",
+    "        self.alpha = alpha\n",
+    "        self.beta = beta\n",
+    "        self.actor = ActorNetwork(alpha, state_shape, n_actions, fc1, fc2).double()\n",
+    "        self.critic = CriticModel(beta, state_shape, fc1, fc2).double()\n",
     "\n",
     "    def get_action(self, state):\n",
-    "        \"\"\"\n",
-    "        Compute the action to take in the current state, basing on policy returned by the network.\n",
+    "        state = T.tensor(state).to(self.actor.device)\n",
+    "        probs = self.actor.forward(state).cpu().detach().numpy()\n",
+    "        action = np.random.choice(self.n_actions, p=probs)\n",
     "\n",
-    "        Note: To pick action according to the probability generated by the network\n",
-    "        \"\"\"\n",
+    "        return action\n",
     "\n",
-    "        #\n",
-    "        # INSERT CODE HERE to get action in a given state\n",
-    "        #        \n",
-    "        \n",
-    "        return chosen_action\n",
+    "    def learn(self, state, action, reward, _state, done):\n",
     "\n",
-    "  \n",
+    "        state = T.tensor(state).to(self.actor.device)\n",
+    "        _state = T.tensor(_state).to(self.actor.device)\n",
+    "        reward = T.tensor(reward).to(self.actor.device)\n",
+    "        action = T.tensor(action).to(self.actor.device)\n",
     "\n",
-    "    def learn(self, state, action, reward, next_state, done):\n",
-    "        \"\"\"\n",
-    "        Function learn networks using information about state, action, reward and next state. \n",
-    "        First the values for state and next_state should be estimated based on output of critic network.\n",
-    "        Critic network should be trained based on target value:\n",
-    "        target = r + \\gamma next_state_value if not done]\n",
-    "        target = r if done.\n",
-    "        Actor network shpuld be trained based on delta value:\n",
-    "        delta = target - state_value\n",
-    "        \"\"\"\n",
-    "        #\n",
-    "        # INSERT CODE HERE to train network\n",
-    "        #\n",
-    "        \n"
+    "        probs = self.actor.forward(state)\n",
+    "        cat = Categorical(probs)\n",
+    "        log_action = cat.log_prob(action)\n",
+    "        v = self.critic.forward(state)\n",
+    "        _v = self.critic.forward(_state)\n",
+    "\n",
+    "        delta = reward + self.gamma * _v * (1-done) - v\n",
+    "\n",
+    "        self.actor.optimizer.zero_grad()\n",
+    "        actor_loss = -delta * log_action\n",
+    "        actor_loss.backward(retain_graph=True)\n",
+    "        self.actor.optimizer.step()\n",
+    "\n",
+    "        self.critic.optimizer.zero_grad()\n",
+    "        critic_loss = delta ** 2\n",
+    "        critic_loss.backward()\n",
+    "        self.critic.optimizer.step()"
    ],
-   "execution_count": null,
+   "execution_count": 45,
    "outputs": []
   },
   {
@@ -149,19 +203,9 @@
     "state_size = env.observation_space.shape[0]\n",
     "action_size = env.action_space.n\n",
     "alpha_learning_rate = 0.0001\n",
-    "beta_learning_rate = 0.0005\n",
-    "\n",
-    "actor_model =         \n",
-    "        #\n",
-    "        # INSERT CODE HERE to build actor network, in the last layer use softmax activation function\n",
-    "        #\n",
-    "\n",
-    "critic_model =         \n",
-    "        #\n",
-    "        # INSERT CODE HERE to build critic network, in the last layer use linear activation function, network should have single output\n",
-    "        #"
+    "beta_learning_rate = 0.0005\n"
    ],
-   "execution_count": null,
+   "execution_count": 46,
    "outputs": []
   },
   {
@@ -177,7 +221,7 @@
    },
    "cell_type": "code",
    "source": [
-    "agent = Agent(state_size, action_size, actor_model, critic_model)\n",
+    "agent = ACActor(state_size, action_size, alpha=alpha_learning_rate, beta=beta_learning_rate)\n",
     "\n",
     "\n",
     "for i in range(100):\n",
@@ -187,11 +231,13 @@
     "        done = False\n",
     "        score = 0\n",
     "        state = env.reset()\n",
+    "        state.astype(np.float32)\n",
     "        while not done:\n",
-    "            action = agent.choose_action(state)\n",
-    "            next_state, reward, done, _ = env.step(action)\n",
-    "            agent.learn(state, action, reward, next_state, done)\n",
-    "            state = next_state\n",
+    "            action = agent.get_action(state)\n",
+    "            _state, reward, done, _ = env.step(action)\n",
+    "            _state.astype(np.float32)\n",
+    "            agent.learn(state, action, reward, _state, done)\n",
+    "            state = _state\n",
     "            score += reward\n",
     "        score_history.append(score)\n",
     "\n",
@@ -201,8 +247,31 @@
     "        print(\"You Win!\")\n",
     "        break"
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean reward:27.880\n",
+      "mean reward:61.920\n",
+      "mean reward:132.760\n",
+      "mean reward:263.920\n",
+      "mean reward:239.360\n",
+      "mean reward:368.250\n",
+      "You Win!\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
