--- a/Lab. 4.ipynb
+++ b/Lab. 4.ipynb
@@ -583,7 +583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -598,6 +598,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ae51ee3d492f24e83e77a52eb34bf16365894f8747390aa8e17995579dedf394"
+   }
   }
  },
  "nbformat": 4,
